test/seq/cmdlists/invalid_ttl1_1.err
SyntaxError: Expecting `)` after TTL channel
Line: 3, Column: 7
ttl(2 #
      ^
